--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div id="music-controls">
         <button id="music-btn">🎵</button>
         <audio id="bg-music" loop>
-            <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3" type="audio/mpeg">
+            <source src="xiulianaiqing_Moodysson.mp3" type="audio/mpeg">
             您的浏览器不支持音频元素
         </audio>
     </div>
