--- a/index.html
+++ b/index.html
@@ -150,18 +150,16 @@
     
     <div id="container">
         <div id="message">
-            <h1>嘿嘿嘿</h1>
+            <h1>七夕快乐！</h1>
             <div id="emoji">🐱</div>
-            <p>点击/触摸屏幕任何地方放烟花解压</p>
-            <button id="surpriseBtn">看看我的诚意</button>
+            <p>点击/触摸屏幕任何地方放烟花</p>
+            <button id="surpriseBtn">看看小惊喜</button>
         </div>
         
         <div id="surpriseMessage" class="hidden">
-            <p>欠君一番真诚意</p>
-            <p>自悔言行欠思量</p>
-            <p>愿为松竹常青友</p>
-            <p>莫作昙花一现缘</p>
-            <div id="emoji">✌️</div>
+            <p>总有些惊奇的际遇🎵</p>
+            <p>比方说当我遇见你~</p>
+            <div id="emoji">🌹</div>
             <button id="backBtn">返回</button>
         </div>
     </div>
@@ -381,3 +379,4 @@
     </script>
 </body>
 </html>
+
