--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>🙏</title>
+    <title>七夕快乐</title>
     <style>
         body {
             margin: 0;
@@ -379,4 +379,5 @@
     </script>
 </body>
 </html>
+
 
