--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h1>七夕快乐！</h1>
             <div id="emoji">🐱</div>
             <p>点击/触摸屏幕任何地方放烟花</p>
-            <button id="surpriseBtn">看看小惊喜</button>
+            <button id="surpriseBtn">→点这里←</button>
         </div>
         
         <div id="surpriseMessage" class="hidden">
@@ -379,6 +379,7 @@
     </script>
 </body>
 </html>
+
 
 
 
