--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <p>总有些惊奇的际遇🎵</p>
             <p>比方说当我遇见你~</p>
             <div id="emoji">🌹</div>
+            <div class="blessing">祝盈霜每天开心每一天！</div>
             <button id="backBtn">返回</button>
         </div>
     </div>
@@ -379,6 +380,7 @@
     </script>
 </body>
 </html>
+
 
 
 
