--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <p>总有些惊奇的际遇🎵</p>
             <p>比方说当我遇见你~</p>
             <div id="emoji">🌹</div>
-            <div class="blessing">祝我的A朋友永远幸福快乐，愿你的每一天都充满阳光与欢笑！</div>
+            <div class="blessing">爱在心间，念在眼前。祝盈霜七夕快乐！开心每一天！</div>
             <button id="backBtn">返回</button>
         </div>
     </div>
@@ -406,3 +406,4 @@
     </script>
 </body>
 </html>
+
